--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>How to make Lasagna</h1>
-    <img src="../img/Classic-Lasagna-14-scaled.jpg">
+    <img src="../img/Classic-Lasagna-14-scaled.jpg" width="150">
     <h2>Description</h2>
     <p>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</p>
     <h2>Ingredients</h2>
