Img added at mainindex and lasagna main page link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>#Odin Recipes</h1>
-    <a href="recipes/lasagna.html">LASAGNA</a>
+    <img src="img/let-s-cook-motivational-phrase-written-with-elegant-font-decorated-by-colander-stylish-lettering-kitchen-utensil-cooking-isolated-white-background-monochrome-vector-illustration_198278-5865.webp">
+    <p>Let's try <a href="recipes/lasagna.html">LASAGNA</a></p>
   </body>
 </html>
