--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -25,5 +25,6 @@
       <li>Step 3</li>
       <li>Step 4</li>
     </ol>
+    <p>Return to <a href="../index.html">Main Page</a></p>
 </body>
 </html>
